# theterm

./: .gitignore  BUILD.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  monaco-setup.ts  platform.ts  storage.ts  styles.css  theme.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/agents-catalog/: architect.md  code-reviewer.md  database-expert.md  debugger.md  devops-engineer.md  frontend-expert.md  python-pro.md  rust-pro.md  security-auditor.md  test-engineer.md  typescript-pro.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/shell-integration/: powershell.ps1
src-tauri/src/: ai.rs  checkpoints.rs  config.rs  fsx.rs  lib.rs  main.rs  profile.rs  pty.rs  verify.rs  worktrees.rs
src/ai/: client.ts
src/diff/: client.ts
src/fs/: client.ts
src/notify/: client.ts
src/profile/: client.ts
src/terminal/: TerminalController.ts  agents.ts
src/ui/: AgentsPanel.tsx  BlocksPanel.tsx  CenterArea.tsx  ChatView.tsx  ClaudeMascot.tsx  CommandPalette.tsx  DiffPanel.tsx  EditorArea.tsx  FileExplorer.tsx  FindBar.tsx  FixPopover.tsx  MonacoEditor.tsx  Onboarding.tsx  ProfilePanel.tsx  ResizeHandles.tsx  SessionsSidebar.tsx  SidePanel.tsx  StatusBar.tsx  TerminalView.tsx  ThemePicker.tsx  TitleBar.tsx  VerifyPanel.tsx  WorktreesPanel.tsx
src/verify/: client.ts
src/worktrees/: client.ts
