[package]
name = "theterm"
version = "0.1.0"
edition = "2021"
default-run = "theterm"

[lib]
name = "theterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "theterm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
tauri-plugin-dialog = "2"
notify = "6"
